refactor: Java17 Stream.toList() 변경